--- a/progressivis/notebooks/MulticlassScatterplotDemo.ipynb
+++ b/progressivis/notebooks/MulticlassScatterplotDemo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4b175da49f6c4edd8e11809356c88924",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Scatterplot()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*********************************************"
+     ]
+    }
+   ],
    "source": [
-    "MulticlassScatterplotDemo.ipynbimport time\n",
+    "\n",
+    "import time\n",
     "import pandas as pd\n",
     "import copy\n",
     "from progressivis.core import Scheduler, Every, JSONEncoderNp, asynchronize\n",
