--- a/progressivis/notebooks/MulticlassScatterplotDemo.ipynb
+++ b/progressivis/notebooks/MulticlassScatterplotDemo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,31 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b175da49f6c4edd8e11809356c88924",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Scatterplot()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*********************************************"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "\n",
     "import time\n",
@@ -132,6 +112,18 @@
     "\n",
     "aio.create_task(s.start(coros=[from_input()]))\n",
     "sc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gr = ModuleGraph()\n",
+    "v = JSONEncoderNp.to_json(s.to_json(short=False))\n",
+    "gr.data = v\n",
+    "gr"
    ]
   }
  ],
