notbook demo improvements

--- a/progressivis/notebooks/MulticlassScatterplotDemo.ipynb
+++ b/progressivis/notebooks/MulticlassScatterplotDemo.ipynb
@@ -8,15 +8,14 @@
    "source": [
     "%gui asyncio\n",
     "from progressivis.nbwidgets import *\n",
-    "sc = Scatterplot()"
+    "sc = Scatterplot()\n",
+    "gr = ModuleGraph()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -47,6 +46,8 @@
     "    if x is not None:\n",
     "        print(len(x))\n",
     "\n",
+    "def _cleanup(data):\n",
+    "    return JSONEncoderNp.cleanup(data)\n",
     "\n",
     "def wait_for_change(widget, value):\n",
     "    future = aio.Future()\n",
@@ -58,14 +59,21 @@
     "    return future\n",
     "           \n",
     " \n",
-    "def _work(wg, val):\n",
-    "    wg.data = val\n",
     "\n",
+    "def feed_widget(wg, val):\n",
+    "    wg.data = _cleanup(val)\n",
+    "\n",
+    "    \n",
     "class MyScatterPlot(MCScatterPlot):\n",
     "    async def run(self, run_number):\n",
     "        await super().run(run_number)\n",
-    "        js_ = JSONEncoderNp.to_json(self._json_cache)\n",
-    "        await asynchronize(_work, sc, js_)\n",
+    "        #js_ = JSONEncoderNp.to_json(self._json_cache)\n",
+    "        #graph_ = JSONEncoderNp.to_json(self.scheduler().to_json(short=False))\n",
+    "        #await asynchronize(_work, sc, js_, graph_)\n",
+    "        aio.create_task(asynchronize(feed_widget, sc, self._json_cache))\n",
+    "        aio.create_task(asynchronize(feed_widget, gr, self.scheduler().to_json(short=False)))\n",
+    "        \n",
+    "                        \n",
     "\n",
     "try:\n",
     "    s = scheduler\n",
@@ -110,8 +118,7 @@
     "        await MULTICLASS.min_value.from_input(bounds['min'])\n",
     "        await MULTICLASS.max_value.from_input(bounds['max'])        \n",
     "\n",
-    "aio.create_task(s.start(coros=[from_input()]))\n",
-    "sc"
+    "aio.create_task(s.start(coros=[from_input()]));"
    ]
   },
   {
@@ -120,10 +127,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gr = ModuleGraph()\n",
-    "v = JSONEncoderNp.to_json(s.to_json(short=False))\n",
-    "gr.data = v\n",
-    "gr"
+    "import ipywidgets as ipw\n",
+    "tab = ipw.Tab()\n",
+    "tab.children = [sc, gr]\n",
+    "tab.set_title(0, 'Scatterplot')\n",
+    "tab.set_title(1, 'Module graph')\n",
+    "tab"
    ]
   }
  ],
