exchanging json as strings explicitly

--- a/progressivis/notebooks/MulticlassScatterplotDemo.ipynb
+++ b/progressivis/notebooks/MulticlassScatterplotDemo.ipynb
@@ -42,12 +42,6 @@
     "    return df[(pklon > -74.08) & (pklon < -73.5) & (pklat > 40.55) & (pklat < 41.00) &\n",
     "                  (dolon > -74.08) & (dolon < -73.5) & (dolat > 40.55) & (dolat < 41.00)]\n",
     "\n",
-    "def _print_len(x):\n",
-    "    if x is not None:\n",
-    "        print(len(x))\n",
-    "\n",
-    "def _cleanup(data):\n",
-    "    return JSONEncoderNp.cleanup(data)\n",
     "\n",
     "def wait_for_change(widget, value):\n",
     "    future = aio.Future()\n",
@@ -61,15 +55,12 @@
     " \n",
     "\n",
     "def feed_widget(wg, val):\n",
-    "    wg.data = _cleanup(val)\n",
+    "    wg.data = JSONEncoderNp.dumps(val)\n",
     "\n",
     "    \n",
     "class MyScatterPlot(MCScatterPlot):\n",
     "    async def run(self, run_number):\n",
     "        await super().run(run_number)\n",
-    "        #js_ = JSONEncoderNp.to_json(self._json_cache)\n",
-    "        #graph_ = JSONEncoderNp.to_json(self.scheduler().to_json(short=False))\n",
-    "        #await asynchronize(_work, sc, js_, graph_)\n",
     "        aio.create_task(asynchronize(feed_widget, sc, self._json_cache))\n",
     "        aio.create_task(asynchronize(feed_widget, gr, self.scheduler().to_json(short=False)))\n",
     "        \n",
