adding ControlPanel widget

--- a/progressivis/notebooks/MulticlassScatterplotDemo.ipynb
+++ b/progressivis/notebooks/MulticlassScatterplotDemo.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "%gui asyncio\n",
@@ -18,7 +20,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import time\n",
     "import pandas as pd\n",
     "import copy\n",
@@ -39,37 +40,29 @@
     "    pklat = df['pickup_latitude']\n",
     "    dolon = df['dropoff_longitude']\n",
     "    dolat = df['dropoff_latitude']\n",
+    "\n",
     "    return df[(pklon > -74.08) & (pklon < -73.5) & (pklat > 40.55) & (pklat < 41.00) &\n",
     "                  (dolon > -74.08) & (dolon < -73.5) & (dolat > 40.55) & (dolat < 41.00)]\n",
     "\n",
-    "\n",
-    "def wait_for_change(widget, value):\n",
-    "    future = aio.Future()\n",
-    "    def getvalue(change):\n",
-    "        # make the new value available\n",
-    "        future.set_result(change.new)\n",
-    "        widget.unobserve(getvalue, value)\n",
-    "    widget.observe(getvalue, value)\n",
-    "    return future\n",
-    "           \n",
-    " \n",
-    "\n",
     "def feed_widget(wg, val):\n",
     "    wg.data = JSONEncoderNp.dumps(val)\n",
-    "\n",
-    "    \n",
-    "class MyScatterPlot(MCScatterPlot):\n",
-    "    async def run(self, run_number):\n",
-    "        await super().run(run_number)\n",
-    "        aio.create_task(asynchronize(feed_widget, sc, self._json_cache))\n",
-    "        aio.create_task(asynchronize(feed_widget, gr, self.scheduler().to_json(short=False)))\n",
-    "        \n",
-    "                        \n",
     "\n",
     "try:\n",
     "    s = scheduler\n",
     "except NameError:\n",
     "    s = Scheduler()\n",
+    "    \n",
+    "cpanel = ControlPanel(s)\n",
+    "\n",
+    "class MyScatterPlot(MCScatterPlot):\n",
+    "    async def run(self, run_number):\n",
+    "        await super().run(run_number)\n",
+    "        aio.create_task(asynchronize(feed_widget, sc, self._json_cache))\n",
+    "        aio.create_task(asynchronize(feed_widget, gr, self.scheduler().to_json(short=False)))\n",
+    "        aio.create_task(asynchronize(feed_widget, cpanel, run_number))        \n",
+    "                        \n",
+    "\n",
+    "\n",
     "\n",
     "#PREFIX= 'https://storage.googleapis.com/tlc-trip-data/2015/'\n",
     "#SUFFIX= ''\n",
@@ -97,6 +90,7 @@
     "CSV.input.filenames = CST.output.table\n",
     "PR = Every(scheduler=s, proc=_quiet)\n",
     "PR.input.df = CSV.output.table\n",
+    "\n",
     "MULTICLASS = MyScatterPlot(scheduler=s, classes=[\n",
     "    ('pickup', 'pickup_longitude', 'pickup_latitude'),\n",
     "    ('dropoff', 'dropoff_longitude', 'dropoff_latitude')], approximate=True)\n",
@@ -107,9 +101,17 @@
     "        await wait_for_change(sc, 'value')\n",
     "        bounds = sc.value\n",
     "        await MULTICLASS.min_value.from_input(bounds['min'])\n",
-    "        await MULTICLASS.max_value.from_input(bounds['max'])        \n",
+    "        await MULTICLASS.max_value.from_input(bounds['max'])\n",
     "\n",
-    "aio.create_task(s.start(coros=[from_input()]));"
+    "async def control_panel(action):\n",
+    "    btn, cb =  cpanel.cb_args(action)\n",
+    "    while True:\n",
+    "        await wait_for_click(btn, cb)\n",
+    "\n",
+    "aio.create_task(s.start(coros=[from_input(), \n",
+    "                               control_panel(\"resume\"),\n",
+    "                               control_panel(\"stop\"), \n",
+    "                               control_panel(\"step\")]));"
    ]
   },
   {
@@ -123,12 +125,14 @@
     "tab.children = [sc, gr]\n",
     "tab.set_title(0, 'Scatterplot')\n",
     "tab.set_title(1, 'Module graph')\n",
-    "tab"
+    "vbox = ipw.VBox([tab, cpanel])\n",
+    "vbox"
    ]
   }
  ],
  "metadata": {
   "jupytext": {
+   "encoding": "# -*- coding: utf-8 -*-",
    "formats": "ipynb,py:light"
   },
   "kernelspec": {
