--- a/progressivis/notebooks/MulticlassScatterplotDemo.ipynb
+++ b/progressivis/notebooks/MulticlassScatterplotDemo.ipynb
@@ -54,16 +54,6 @@
     "    \n",
     "cpanel = ControlPanel(s)\n",
     "\n",
-    "class MyScatterPlot(MCScatterPlot):\n",
-    "    async def run(self, run_number):\n",
-    "        await super().run(run_number)\n",
-    "        aio.create_task(asynchronize(feed_widget, sc, self._json_cache))\n",
-    "        aio.create_task(asynchronize(feed_widget, gr, self.scheduler().to_json(short=False)))\n",
-    "        aio.create_task(asynchronize(feed_widget, cpanel, run_number))        \n",
-    "                        \n",
-    "\n",
-    "\n",
-    "\n",
     "#PREFIX= 'https://storage.googleapis.com/tlc-trip-data/2015/'\n",
     "#SUFFIX= ''\n",
     "PREFIX = '../../../nyc-taxi/'\n",
@@ -91,25 +81,18 @@
     "PR = Every(scheduler=s, proc=_quiet)\n",
     "PR.input.df = CSV.output.table\n",
     "\n",
-    "MULTICLASS = MyScatterPlot(scheduler=s, classes=[\n",
+    "MULTICLASS = MCScatterPlot(scheduler=s, classes=[\n",
     "    ('pickup', 'pickup_longitude', 'pickup_latitude'),\n",
     "    ('dropoff', 'dropoff_longitude', 'dropoff_latitude')], approximate=True)\n",
     "MULTICLASS.create_dependent_modules(CSV, 'table')\n",
-    "\n",
-    "async def from_input():\n",
-    "    while True:\n",
-    "        await wait_for_change(sc, 'value')\n",
-    "        bounds = sc.value\n",
-    "        await MULTICLASS.min_value.from_input(bounds['min'])\n",
-    "        await MULTICLASS.max_value.from_input(bounds['max'])\n",
     "\n",
     "async def control_panel(action):\n",
     "    btn, cb =  cpanel.cb_args(action)\n",
     "    while True:\n",
     "        await wait_for_click(btn, cb)\n",
-    "\n",
-    "aio.create_task(s.start(coros=[from_input(), \n",
-    "                               control_panel(\"resume\"),\n",
+    "    \n",
+    "aio.create_task(s.start(coros=sc.link_module(MULTICLASS)+\n",
+    "                               [control_panel(\"resume\"),\n",
     "                               control_panel(\"stop\"), \n",
     "                               control_panel(\"step\")]));"
    ]
@@ -150,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
