--- a/progressivis/notebooks/PsBoardDemo.ipynb
+++ b/progressivis/notebooks/PsBoardDemo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -14,17 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "***********************************"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "import pandas as pd\n",
@@ -75,7 +67,7 @@
     "]\n",
     "\n",
     "FILENAMES = pd.DataFrame({'filename': URLS})\n",
-    "#import pdb;pdb.set_trace()\n",
+    "\n",
     "CST = Constant(Table('filenames', data=FILENAMES), scheduler=s)\n",
     "CSV = CSVLoader(index_col=False, skipinitialspace=True,\n",
     "                usecols=['pickup_longitude', 'pickup_latitude',\n",
@@ -86,74 +78,24 @@
     "PR = Every(scheduler=s, proc=_quiet)\n",
     "PR.input.df = CSV.output.table\n",
     "psboard = PsBoard(s)\n",
-    "refresh_event = aio.Event()\n",
-    "class MyScatterPlot(MCScatterPlot):\n",
-    "    async def run(self, run_number):\n",
-    "        await super().run(run_number)\n",
-    "        psboard.enable_refresh()\n",
-    "        #aio.create_task(asynchronize(psboard.refresh))\n",
-    "MULTICLASS = MyScatterPlot(scheduler=s, classes=[\n",
+    "\n",
+    "MULTICLASS = MCScatterPlot(scheduler=s, classes=[\n",
     "    ('pickup', 'pickup_longitude', 'pickup_latitude'),\n",
     "    ('dropoff', 'dropoff_longitude', 'dropoff_latitude')], approximate=True)\n",
     "MULTICLASS.create_dependent_modules(CSV, 'table')\n",
     "\n",
-    "async def from_input():\n",
-    "    while True:\n",
-    "        await wait_for_change(sc, 'value')\n",
-    "        bounds = sc.value\n",
-    "        await MULTICLASS.min_value.from_input(bounds['min'])\n",
-    "        await MULTICLASS.max_value.from_input(bounds['max'])\n",
+    "psboard.register_visualisation(Scatterplot(), MULTICLASS)\n",
     "\n",
-    "aio.create_task(s.start(coros=psboard.coroutines));\n"
+    "aio.create_task(s.start(coros=psboard.coroutines));"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8cb72b395f3f401bba17bc475e7386ee",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "PsBoard(children=(ControlPanel(children=(Button(description='Resume', disabled=True, icon='play', style=Button…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*********************"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(psboard)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(psboard.current_module)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(psboard.tab.children[1])"
    ]
   }
  ],
