new devs and fixes

--- a/progressivis/notebooks/PsBoardDemo.ipynb
+++ b/progressivis/notebooks/PsBoardDemo.ipynb
@@ -18,20 +18,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
     "import pandas as pd\n",
-    "import copy\n",
-    "from progressivis.core import Scheduler, Every, JSONEncoderNp, asynchronize\n",
+    "from progressivis.core import Scheduler, Every\n",
     "from progressivis.table import Table\n",
     "from progressivis.vis import MCScatterPlot\n",
     "from progressivis.io import CSVLoader\n",
     "#from progressivis.datasets import get_dataset\n",
     "from progressivis.table.constant import Constant\n",
     "import asyncio as aio\n",
-    "import functools as ft\n",
     "\n",
     "def _quiet(x): pass\n",
-    "\n",
     "\n",
     "def _filter(df):\n",
     "    pklon = df['pickup_longitude']\n",
@@ -41,10 +37,6 @@
     "\n",
     "    return df[(pklon > -74.08) & (pklon < -73.5) & (pklat > 40.55) & (pklat < 41.00) &\n",
     "                  (dolon > -74.08) & (dolon < -73.5) & (dolat > 40.55) & (dolat < 41.00)]\n",
-    "\n",
-    "def feed_widget(wg):\n",
-    "    wg.data = JSONEncoderNp.dumps(val)\n",
-    "    wg.refresh()\n",
     "\n",
     "try:\n",
     "    s = scheduler\n",
@@ -84,8 +76,13 @@
     "    ('dropoff', 'dropoff_longitude', 'dropoff_latitude')], approximate=True)\n",
     "MULTICLASS.create_dependent_modules(CSV, 'table')\n",
     "\n",
+    "# Visualisations require registration :\n",
+    "# 1) When widget provides the link_module() method do :\n",
     "psboard.register_visualisation(Scatterplot(), MULTICLASS)\n",
-    "\n",
+    "# 2) When widget is generic or for overloading the link_module() method do:\n",
+    "# psboard.register_visualisation(FooWidget(), bar_module, glue=glue_func)\n",
+    "# NB: glue_func(widget, module)-> [coroutine] must be provided\n",
+    "# Start application :\n",
     "aio.create_task(s.start(coros=psboard.coroutines));"
    ]
   },
