--- a/progressivis/notebooks/PsBoardDemo.ipynb
+++ b/progressivis/notebooks/PsBoardDemo.ipynb
@@ -69,13 +69,15 @@
     "CSV.input.filenames = CST.output.table\n",
     "PR = Every(scheduler=s, proc=_quiet)\n",
     "PR.input.df = CSV.output.table\n",
-    "psboard = PsBoard(s)\n",
+    "\n",
     "\n",
     "MULTICLASS = MCScatterPlot(scheduler=s, classes=[\n",
     "    ('pickup', 'pickup_longitude', 'pickup_latitude'),\n",
     "    ('dropoff', 'dropoff_longitude', 'dropoff_latitude')], approximate=True)\n",
     "MULTICLASS.create_dependent_modules(CSV, 'table')\n",
     "\n",
+    "# Create the dashboard object\n",
+    "psboard = PsBoard(s)\n",
     "# Visualisations require registration :\n",
     "# 1) When widget provides the link_module() method do :\n",
     "psboard.register_visualisation(Scatterplot(), MULTICLASS)\n",
