adaptations+doc for Voila

--- a/progressivis/notebooks/PsBoardDemo.ipynb
+++ b/progressivis/notebooks/PsBoardDemo.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "#PREFIX= 'https://storage.googleapis.com/tlc-trip-data/2015/'\n",
     "#SUFFIX= ''\n",
-    "PREFIX = '../../../nyc-taxi/'\n",
+    "PREFIX = '../../../nyc-taxi/'https://user-images.githubusercontent.com/591645/59288034-1f8d6a80-8c73-11e9-860f-c3449dd3dcb5.gif\n",
     "\n",
     "SUFFIX = '.bz2'\n",
     "\n",
@@ -94,6 +94,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
+    "time.sleep(3) # for voilà ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "display(psboard)"
    ]
   }
@@ -118,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
