mbkmeans working with jupyter+ many (forgotten) new files

--- a/progressivis/notebooks/PsBoardDemo.ipynb
+++ b/progressivis/notebooks/PsBoardDemo.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "#PREFIX= 'https://storage.googleapis.com/tlc-trip-data/2015/'\n",
     "#SUFFIX= ''\n",
-    "PREFIX = '../../../nyc-taxi/'https://user-images.githubusercontent.com/591645/59288034-1f8d6a80-8c73-11e9-860f-c3449dd3dcb5.gif\n",
+    "PREFIX = '../../../nyc-taxi/'\n",
     "\n",
     "SUFFIX = '.bz2'\n",
     "\n",
