--- a/notebooks/PsBoardDemo.ipynb
+++ b/notebooks/PsBoardDemo.ipynb
@@ -2,21 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
     "%gui asyncio\n",
-    "from progressivis.nbwidgets import *"
+    "from progressivis_nb_widgets.nbwidgets import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "****************************************"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from progressivis.core import Scheduler, Every\n",
@@ -100,9 +108,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f480433ab664472b8f55902b274a571d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "PsBoard(children=(ControlPanel(children=(Button(description='Resume', disabled=True, icon='play', style=Button…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*"
+     ]
+    }
+   ],
    "source": [
     "display(psboard)"
    ]
@@ -128,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
