--- a/notebooks/MBKMeansDemo.ipynb
+++ b/notebooks/MBKMeansDemo.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%gui asyncio\n",
-    "from progressivis_nb_widgets.nbwidgets import *"
+    "from progressivis_nb_widgets import *"
    ]
   },
   {
@@ -52,7 +52,9 @@
     "# psboard.register_visualisation(FooWidget(), bar_module, glue=glue_func)\n",
     "# NB: glue_func(widget, module)-> [coroutine] must be provided\n",
     "# Start application :\n",
-    "aio.create_task(s.start(coros=psboard.coroutines));"
+    "async def fun():\n",
+    "    await aio.gather(s.start(), *psboard.coroutines)\n",
+    "aio.create_task(fun())"
    ]
   },
   {
