--- a/notebooks/PsBoardDemo.ipynb
+++ b/notebooks/PsBoardDemo.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "%gui asyncio\n",
-    "from progressivis_nb_widgets.nbwidgets import *"
+    "from progressivis_nb_widgets import *"
    ]
   },
   {
@@ -84,8 +84,10 @@
     "# 2) When widget is generic or for overloading the link_module() method do:\n",
     "# psboard.register_visualisation(FooWidget(), bar_module, glue=glue_func)\n",
     "# NB: glue_func(widget, module)-> [coroutine] must be provided\n",
-    "# Start application :\n",
-    "aio.create_task(s.start(coros=psboard.coroutines));"
+    "# Start application :psboard.coroutines)\n",
+    "async def fun():\n",
+    "    await aio.gather(s.start(), *psboard.coroutines)\n",
+    "aio.create_task(fun())"
    ]
   },
   {
