--- a/notebooks/PsBoardDemo4Binder.ipynb
+++ b/notebooks/PsBoardDemo4Binder.ipynb
@@ -34,6 +34,7 @@
     "#from progressivis.datasets import get_dataset\n",
     "from progressivis.table.constant import Constant\n",
     "import asyncio as aio\n",
+    "import os\n",
     "\n",
     "def _quiet(x): pass\n",
     "\n",
@@ -53,7 +54,8 @@
     "\n",
     "#PREFIX= 'https://storage.googleapis.com/tlc-trip-data/2015/'\n",
     "#SUFFIX= ''\n",
-    "PREFIX = '../nyc-taxi-binder/'\n",
+    "home = os.getenv(\"HOME\")\n",
+    "PREFIX = home + '/nyc-taxi-binder/'\n",
     "SUFFIX = '.bz2'\n",
     "\n",
     "URLS = [\n",
