--- a/notebooks/PsBoardDemo4Binder.ipynb
+++ b/notebooks/PsBoardDemo4Binder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -14,17 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****************************************"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from progressivis.core import Scheduler, Every\n",
@@ -52,20 +44,7 @@
     "except NameError:\n",
     "    s = Scheduler()\n",
     "\n",
-    "#PREFIX= 'https://storage.googleapis.com/tlc-trip-data/2015/'\n",
-    "#SUFFIX= ''\n",
-    "home = os.getenv(\"HOME\")\n",
-    "PREFIX = home + '/nyc-taxi-binder/'\n",
-    "SUFFIX = '.bz2'\n",
-    "\n",
-    "URLS = [\n",
-    "    PREFIX+'yellow_tripdata_2015-01.csv'+SUFFIX,\n",
-    "    PREFIX+'yellow_tripdata_2015-02.csv'+SUFFIX,\n",
-    "#    PREFIX+'yellow_tripdata_2015-03.csv'+SUFFIX,\n",
-    "#    PREFIX+'yellow_tripdata_2015-04.csv'+SUFFIX,\n",
-    "#    PREFIX+'yellow_tripdata_2015-05.csv'+SUFFIX,\n",
-    "#    PREFIX+'yellow_tripdata_2015-06.csv'+SUFFIX,\n",
-    "]\n",
+    "URLS = [f\"https://s3.amazonaws.com/nyc-tlc/trip+data/yellow_tripdata_2015-0{n}.csv\" for n in range(1,7)]\n",
     "\n",
     "FILENAMES = pd.DataFrame({'filename': URLS})\n",
     "\n",
@@ -109,31 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c5c6bddd7584e6cb5348dd6aad8d101",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "PsBoard(children=(ControlPanel(children=(Button(description='Resume', disabled=True, icon='play', style=Button…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**********"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(psboard)"
    ]
