--- a/notebooks/PsBoardDemo4Binder.ipynb
+++ b/notebooks/PsBoardDemo4Binder.ipynb
@@ -73,17 +73,9 @@
     "# psboard.register_visualisation(FooWidget(), bar_module, glue=glue_func)\n",
     "# NB: glue_func(widget, module)-> [coroutine] must be provided\n",
     "# Start application :\n",
-    "aio.create_task(s.start(coros=psboard.coroutines));"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "time.sleep(10) # for voilà ..."
+    "async def gath():\n",
+    "    await aio.gather(s.start(), *psboard.coroutines)\n",
+    "aio.create_task(gath())"
    ]
   },
   {
