--- a/notebooks/PsBoardDemo4Binder.ipynb
+++ b/notebooks/PsBoardDemo4Binder.ipynb
@@ -75,7 +75,7 @@
     "# Start application :\n",
     "async def gath():\n",
     "    await aio.gather(s.start(), *psboard.coroutines)\n",
-    "aio.create_task(gath())"
+    "aio.create_task(gath());"
    ]
   },
   {
