avoids gui asyncio magic

--- a/notebooks/PsBoardDemo4Binder.ipynb
+++ b/notebooks/PsBoardDemo4Binder.ipynb
@@ -8,7 +8,6 @@
    },
    "outputs": [],
    "source": [
-    "%gui asyncio\n",
     "from progressivis_nb_widgets.nbwidgets import *"
    ]
   },
@@ -26,6 +25,7 @@
     "#from progressivis.datasets import get_dataset\n",
     "from progressivis.table.constant import Constant\n",
     "import asyncio as aio\n",
+    "import threading\n",
     "import os\n",
     "\n",
     "def _quiet(x): pass\n",
@@ -35,6 +35,7 @@
     "    pklat = df['pickup_latitude']\n",
     "    dolon = df['dropoff_longitude']\n",
     "    dolat = df['dropoff_latitude']\n",
+    "\n",
     "\n",
     "    return df[(pklon > -74.08) & (pklon < -73.5) & (pklat > 40.55) & (pklat < 41.00) &\n",
     "                  (dolon > -74.08) & (dolon < -73.5) & (dolat > 40.55) & (dolat < 41.00)]\n",
@@ -73,9 +74,18 @@
     "# psboard.register_visualisation(FooWidget(), bar_module, glue=glue_func)\n",
     "# NB: glue_func(widget, module)-> [coroutine] must be provided\n",
     "# Start application :\n",
+    "\n",
     "async def gath():\n",
     "    await aio.gather(s.start(), *psboard.coroutines)\n",
-    "aio.create_task(gath());"
+    "\n",
+    "def func_():\n",
+    "    loop = aio.new_event_loop()\n",
+    "    aio.set_event_loop(loop)\n",
+    "    loop.run_until_complete(gath())\n",
+    "    loop.close()\n",
+    "\n",
+    "thread = threading.Thread(target=func_, args=())\n",
+    "thread.start()"
    ]
   },
   {
@@ -84,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "psboard"
+    "display(psboard)"
    ]
   }
  ],
