--- a/notebooks/PsBoardDemo4Binder.ipynb
+++ b/notebooks/PsBoardDemo4Binder.ipynb
@@ -19,6 +19,7 @@
    "source": [
     "import pandas as pd\n",
     "from progressivis.core import Scheduler, Every\n",
+    "from progressivis.core.utils import gather_and_run\n",
     "from progressivis.table import Table\n",
     "from progressivis.vis import MCScatterPlot\n",
     "from progressivis.io import CSVLoader\n",
@@ -75,17 +76,7 @@
     "# NB: glue_func(widget, module)-> [coroutine] must be provided\n",
     "# Start application :\n",
     "\n",
-    "async def gath():\n",
-    "    await aio.gather(s.start(), *psboard.coroutines)\n",
-    "\n",
-    "def func_():\n",
-    "    loop = aio.new_event_loop()\n",
-    "    aio.set_event_loop(loop)\n",
-    "    loop.run_until_complete(gath())\n",
-    "    loop.close()\n",
-    "\n",
-    "thread = threading.Thread(target=func_, args=())\n",
-    "thread.start()"
+    "gather_and_run(s.start(), *psboard.coroutines)"
    ]
   },
   {
