--- a/notebooks/PsBoardDemo4Binder.ipynb
+++ b/notebooks/PsBoardDemo4Binder.ipynb
@@ -49,7 +49,6 @@
     "URLS = [f\"https://s3.amazonaws.com/nyc-tlc/trip+data/yellow_tripdata_2015-0{n}.csv\" for n in range(1,7)]\n",
     "\n",
     "FILENAMES = pd.DataFrame({'filename': URLS})\n",
-    "\n",
     "CST = Constant(Table('filenames', data=FILENAMES), scheduler=s)\n",
     "CSV = CSVLoader(index_col=False, skipinitialspace=True,\n",
     "                usecols=['pickup_longitude', 'pickup_latitude',\n",
@@ -63,7 +62,7 @@
     "\n",
     "MULTICLASS = MCScatterPlot(scheduler=s, classes=[\n",
     "    ('pickup', 'pickup_longitude', 'pickup_latitude'),\n",
-    "    ('dropoff', 'dropoff_longitude', 'dropoff_latitude')], approximate=True)\n",
+    "    ('dropoff', 'dropoff_longitude', 'dropoff_latitude')], approximate=True, ipydata=True)\n",
     "MULTICLASS.create_dependent_modules(CSV, 'table')\n",
     "\n",
     "# Create the dashboard object\n",
@@ -109,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
