--- a/notebooks/PsBoardDemo.ipynb
+++ b/notebooks/PsBoardDemo.ipynb
@@ -3,13 +3,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "%gui asyncio\n",
-    "from progressivis_nb_widgets import *"
+    "from progressivis_nb_widgets.nbwidgets import *"
    ]
   },
   {
@@ -20,12 +17,15 @@
    "source": [
     "import pandas as pd\n",
     "from progressivis.core import Scheduler, Every\n",
+    "from progressivis.core.utils import gather_and_run\n",
     "from progressivis.table import Table\n",
     "from progressivis.vis import MCScatterPlot\n",
     "from progressivis.io import CSVLoader\n",
     "#from progressivis.datasets import get_dataset\n",
     "from progressivis.table.constant import Constant\n",
     "import asyncio as aio\n",
+    "import threading\n",
+    "import os\n",
     "\n",
     "def _quiet(x): pass\n",
     "\n",
@@ -35,6 +35,7 @@
     "    dolon = df['dropoff_longitude']\n",
     "    dolat = df['dropoff_latitude']\n",
     "\n",
+    "\n",
     "    return df[(pklon > -74.08) & (pklon < -73.5) & (pklat > 40.55) & (pklat < 41.00) &\n",
     "                  (dolon > -74.08) & (dolon < -73.5) & (dolat > 40.55) & (dolat < 41.00)]\n",
     "\n",
@@ -42,9 +43,6 @@
     "    s = scheduler\n",
     "except NameError:\n",
     "    s = Scheduler()\n",
-    "\n",
-    "#PREFIX= 'https://storage.googleapis.com/tlc-trip-data/2015/'\n",
-    "#SUFFIX= ''\n",
     "PREFIX = '../../../nyc-taxi/'\n",
     "\n",
     "SUFFIX = '.bz2'\n",
@@ -59,7 +57,6 @@
     "]\n",
     "\n",
     "FILENAMES = pd.DataFrame({'filename': URLS})\n",
-    "\n",
     "CST = Constant(Table('filenames', data=FILENAMES), scheduler=s)\n",
     "CSV = CSVLoader(index_col=False, skipinitialspace=True,\n",
     "                usecols=['pickup_longitude', 'pickup_latitude',\n",
@@ -73,7 +70,7 @@
     "\n",
     "MULTICLASS = MCScatterPlot(scheduler=s, classes=[\n",
     "    ('pickup', 'pickup_longitude', 'pickup_latitude'),\n",
-    "    ('dropoff', 'dropoff_longitude', 'dropoff_latitude')], approximate=True)\n",
+    "    ('dropoff', 'dropoff_longitude', 'dropoff_latitude')], approximate=True, ipydata=True)\n",
     "MULTICLASS.create_dependent_modules(CSV, 'table')\n",
     "\n",
     "# Create the dashboard object\n",
@@ -84,20 +81,9 @@
     "# 2) When widget is generic or for overloading the link_module() method do:\n",
     "# psboard.register_visualisation(FooWidget(), bar_module, glue=glue_func)\n",
     "# NB: glue_func(widget, module)-> [coroutine] must be provided\n",
-    "# Start application :psboard.coroutines)\n",
-    "async def fun():\n",
-    "    await aio.gather(s.start(), *psboard.coroutines)\n",
-    "aio.create_task(fun())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "time.sleep(3) # for voilà ..."
+    "# Start application :\n",
+    "\n",
+    "gather_and_run(s.start(), *psboard.coroutines)"
    ]
   },
   {
@@ -111,10 +97,6 @@
   }
  ],
  "metadata": {
-  "jupytext": {
-   "encoding": "# -*- coding: utf-8 -*-",
-   "formats": "ipynb,py:light"
-  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -130,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
