notebook detection before using ipydatawidgets

--- a/notebooks/PsBoardDemo.ipynb
+++ b/notebooks/PsBoardDemo.ipynb
@@ -70,7 +70,7 @@
     "\n",
     "MULTICLASS = MCScatterPlot(scheduler=s, classes=[\n",
     "    ('pickup', 'pickup_longitude', 'pickup_latitude'),\n",
-    "    ('dropoff', 'dropoff_longitude', 'dropoff_latitude')], approximate=True, ipydata=True)\n",
+    "    ('dropoff', 'dropoff_longitude', 'dropoff_latitude')], approximate=True)\n",
     "MULTICLASS.create_dependent_modules(CSV, 'table')\n",
     "\n",
     "# Create the dashboard object\n",
