--- a/notebooks/MBKMeansDemo.ipynb
+++ b/notebooks/MBKMeansDemo.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%gui asyncio\n",
     "from progressivis_nb_widgets import *"
    ]
   },
@@ -26,6 +25,7 @@
     "from progressivis.vis import MCScatterPlot\n",
     "from progressivis.datasets import get_dataset\n",
     "from progressivis.stats import RandomTable\n",
+    "from progressivis.core.utils import gather_and_run\n",
     "\n",
     "try:\n",
     "    s = scheduler\n",
@@ -44,6 +44,7 @@
     "\n",
     "sp.move_point = mbkmeans.moved_center # for input management\n",
     "# Create the dashboard object\n",
+    "\n",
     "psboard = PsBoard(s)\n",
     "# Visualisations require registration :\n",
     "# 1) When widget provides the link_module() method do :\n",
@@ -52,25 +53,15 @@
     "# psboard.register_visualisation(FooWidget(), bar_module, glue=glue_func)\n",
     "# NB: glue_func(widget, module)-> [coroutine] must be provided\n",
     "# Start application :\n",
-    "async def fun():\n",
-    "    await aio.gather(s.start(), *psboard.coroutines)\n",
-    "aio.create_task(fun())"
+    "gather_and_run(s.start(), *psboard.coroutines)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "time.sleep(3) # for voilà ..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "display(psboard)"
@@ -93,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
