--- a/notebooks/MBKMeansSimpleDemo.ipynb
+++ b/notebooks/MBKMeansSimpleDemo.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "\"\"\"\n",
     "Clustering datasets may be found at\n",
-    "https://cs.joensuu.fi/sipu/datasets/\n",
+    "http://cs.joensuu.fi/sipu/datasets/\n",
     "\"\"\"\n",
     "from progressivis import Scheduler, Every#, log_level\n",
     "from progressivis.cluster import MBKMeans\n",
@@ -27,24 +27,26 @@
     "from progressivis.stats import RandomTable\n",
     "from progressivis.core.utils import gather_and_run\n",
     "from progressivis.utils.psdict import PsDict\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
+    "from progressivis.datasets.random import generate_random_multivariate_normal_csv as gen_csv\n",
     "try:\n",
     "    s = scheduler\n",
     "except NameError:\n",
     "    s = Scheduler()\n",
     "    #log_level(package=\"progressivis.cluster\")\n",
     "\n",
-    "data = CSVLoader(get_dataset('cluster:s1'),sep='\\\\s+',skipinitialspace=True,header=None,index_col=False,scheduler=s)\n",
-    "mbkmeans = MBKMeans(columns=['_0', '_1'], n_clusters=15, batch_size=100, is_input=False, scheduler=s)\n",
+    "file_name = \"/tmp/foobar.csv\"\n",
+    "gen_csv(file_name, rows=999999, reset=True) #, header='_0,_1', reset=False)\n",
+    "data = CSVLoader(file_name, skipinitialspace=True, header=None, index_col=False,scheduler=s)\n",
+    "mbkmeans = MBKMeans(columns=['_0', '_1'], n_clusters=3, batch_size=100, tol=0.01, is_input=False, scheduler=s)\n",
     "sp = MCScatterPlot(scheduler=s, classes=[('Scatterplot', '_0', '_1', mbkmeans)], approximate=True)\n",
     "sp.create_dependent_modules(data,'table')\n",
     "sp['Scatterplot'].min_value._table = PsDict({'_0': -np.inf, '_1': -np.inf})\n",
     "sp['Scatterplot'].max_value._table = PsDict({'_0': np.inf, '_1': np.inf})\n",
     "mbkmeans.input.table = sp['Scatterplot'].range_query_2d.output.table\n",
+    "#mbkmeans.input.table = data.output.table\n",
     "mbkmeans.create_dependent_modules()\n",
-    "prn = Every(scheduler=s)\n",
-    "prn.input.df = mbkmeans.output.table\n",
-    "\n",
     "sp.move_point = mbkmeans.moved_center # for input management\n",
     "# Create the dashboard object\n",
     "\n",
@@ -62,9 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "display(psboard)"
@@ -91,5 +91,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
