--- a/notebooks/MBKMeansSimpleDemo.ipynb
+++ b/notebooks/MBKMeansSimpleDemo.ipynb
@@ -40,7 +40,7 @@
     "gen_csv(file_name, rows=999999, reset=True) #, header='_0,_1', reset=False)\n",
     "data = CSVLoader(file_name, skipinitialspace=True, header=None, index_col=False,scheduler=s)\n",
     "mbkmeans = MBKMeans(columns=['_0', '_1'], n_clusters=3, batch_size=100, tol=0.01, is_input=False, scheduler=s)\n",
-    "sp = MCScatterPlot(scheduler=s, classes=[('Scatterplot', '_0', '_1', mbkmeans)], approximate=True)\n",
+    "sp = MCScatterPlot(scheduler=s, classes=[('Scatterplot', '_0', '_1', mbkmeans)])\n",
     "sp.create_dependent_modules(data,'table')\n",
     "sp['Scatterplot'].min_value._table = PsDict({'_0': -np.inf, '_1': -np.inf})\n",
     "sp['Scatterplot'].max_value._table = PsDict({'_0': np.inf, '_1': np.inf})\n",
