--- a/notebooks/PsBoardDemo4Binder.ipynb
+++ b/notebooks/PsBoardDemo4Binder.ipynb
@@ -69,7 +69,7 @@
     "psboard = PsBoard(s)\n",
     "# Visualisations require registration :\n",
     "# 1) When widget provides the link_module() method do :\n",
-    "psboard.register_visualisation(Scatterplot(), MULTICLASS)\n",
+    "psboard.register_visualisation(Scatterplot(disable=['init_centroids']), MULTICLASS)\n",
     "# 2) When widget is generic or for overloading the link_module() method do:\n",
     "# psboard.register_visualisation(FooWidget(), bar_module, glue=glue_func)\n",
     "# NB: glue_func(widget, module)-> [coroutine] must be provided\n",
@@ -108,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
