now all slots in process_slot are reseted when conditions are met on at least one slot

--- a/doc/RunStepDecorators.ipynb
+++ b/doc/RunStepDecorators.ipynb
@@ -66,10 +66,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* `reset_if` indicates if resetting is required and in which case. By default the slot is reseted if deletions or modifications occurred on the input data. Possible values are:\n",
-    "  * `reset_if='update'` slot is reseted only if modifications occurred\n",
-    "  * `reset_if='delete'` slot is reseted only if deletions occurred\n",
-    "  * `reset_if='False'` slot is NOT reseted in any case\n",
+    "* `reset_if` indicates if resetting is required and in which case. By default all (names) slots are reseted if deletions or modifications occurred on the input data (i.e. on at least one slot). Possible values are:\n",
+    "  * `reset_if='update'` slots are reseted only if modifications occurred\n",
+    "  * `reset_if='delete'` slots are reseted only if deletions occurred\n",
+    "  * `reset_if='False'` slot are NOT reseted in any case\n",
     "* `reset_cb` is pertinent only when `reset_if` is not **False**. For now `reset_cb` can contain a method name (i.e. a string) to be called after the slot has been reseted. The method must not have arguments (except `self`)\n",
     "\n",
     "We will apply `process_slot()` once for all slots requiring the same treatment :"
