progressive blobs maker

--- a/notebooks/MBKMeansSimpleDemo.ipynb
+++ b/notebooks/MBKMeansSimpleDemo.ipynb
@@ -12,7 +12,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -30,15 +32,21 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from progressivis.datasets.random import generate_random_multivariate_normal_csv as gen_csv\n",
+    "from progressivis.stats.blobs_table import BlobsTable\n",
     "try:\n",
     "    s = scheduler\n",
     "except NameError:\n",
     "    s = Scheduler()\n",
-    "    #log_level(package=\"progressivis.cluster\")\n",
     "\n",
-    "file_name = \"/tmp/foobar.csv\"\n",
-    "gen_csv(file_name, rows=999999, reset=True) #, header='_0,_1', reset=False)\n",
-    "data = CSVLoader(file_name, skipinitialspace=True, header=None, index_col=False,scheduler=s)\n",
+    "WITH_CSV = False\n",
+    "if WITH_CSV:\n",
+    "    file_name = \"/tmp/foobar.csv\"\n",
+    "    gen_csv(file_name, rows=999999, reset=True) #, header='_0,_1', reset=False)\n",
+    "    #file_name='/tmp/blobs.csv'\n",
+    "    data = CSVLoader(file_name, skipinitialspace=True, header=None, index_col=False,scheduler=s)\n",
+    "else: # blobs\n",
+    "    centers = [(0.1, 0.3), (0.7, 0.5), (-0.4, -0.3)]\n",
+    "    data = BlobsTable(columns=['_0', '_1'],  centers=centers, cluster_std=0.2, rows=999999, scheduler=s)\n",
     "mbkmeans = MBKMeans(columns=['_0', '_1'], n_clusters=3, batch_size=100, tol=0.01, is_input=False, scheduler=s)\n",
     "sp = MCScatterPlot(scheduler=s, classes=[('Scatterplot', '_0', '_1', mbkmeans)])\n",
     "sp.create_dependent_modules(data,'table')\n",
@@ -55,7 +63,7 @@
     "# 1) When widget provides the link_module() method do :\n",
     "psboard.register_visualisation(Scatterplot(), sp)\n",
     "# 2) When widget is generic or for overloading the link_module() method do:\n",
-    "# psboard.register_visualisation(FooWidget(), bar_module, glue=glue_func)\n",
+    "#psboard.register_visualisation(FooWidget(), bar_module, glue=glue_func)\n",
     "# NB: glue_func(widget, module)-> [coroutine] must be provided\n",
     "# Start application :\n",
     "gather_and_run(s.start(), *psboard.coroutines)"
@@ -64,10 +72,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "display(psboard)"
+    "#print(psboard.viz_register)\n",
+    "display(psboard.viz_register['mc_scatter_plot_1'][0][0])"
    ]
   }
  ],
