adding a multivariate normal generator

--- a/notebooks/MBKMeansSimpleDemo.ipynb
+++ b/notebooks/MBKMeansSimpleDemo.ipynb
@@ -32,21 +32,21 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from progressivis.datasets.random import generate_random_multivariate_normal_csv as gen_csv\n",
-    "from progressivis.stats.blobs_table import BlobsTable\n",
+    "from progressivis.stats.blobs_table import BlobsTable, MVBlobsTable\n",
     "try:\n",
     "    s = scheduler\n",
     "except NameError:\n",
     "    s = Scheduler()\n",
     "\n",
-    "WITH_CSV = False\n",
-    "if WITH_CSV:\n",
-    "    file_name = \"/tmp/foobar.csv\"\n",
-    "    gen_csv(file_name, rows=999999, reset=True) #, header='_0,_1', reset=False)\n",
-    "    #file_name='/tmp/blobs.csv'\n",
-    "    data = CSVLoader(file_name, skipinitialspace=True, header=None, index_col=False,scheduler=s)\n",
-    "else: # blobs\n",
+    "MULTIVARIATE_NORMAL = True\n",
+    "\n",
+    "if not MULTIVARIATE_NORMAL: # simple isotropic blobs (using scikit-learn make_blobs)\n",
     "    centers = [(0.1, 0.3), (0.7, 0.5), (-0.4, -0.3)]\n",
     "    data = BlobsTable(columns=['_0', '_1'],  centers=centers, cluster_std=0.2, rows=999999, scheduler=s)\n",
+    "else: # i.e. control each cluster's covariance matrix (using numpy.random.multivariate_normal)\n",
+    "    means = [0.1, 0.3], [0.7, 0.5], [-0.4, -0.3]\n",
+    "    covs = [[0.01, 0], [0, 0.09]], [[0.04, 0], [0, 0.01]], [[0.09, 0.04], [0.04, 0.02]]\n",
+    "    data = MVBlobsTable(columns=['_0', '_1'], means=means, covs=covs, rows=999999, scheduler=s)\n",
     "mbkmeans = MBKMeans(columns=['_0', '_1'], n_clusters=3, batch_size=100, tol=0.01, is_input=False, scheduler=s)\n",
     "sp = MCScatterPlot(scheduler=s, classes=[('Scatterplot', '_0', '_1', mbkmeans)])\n",
     "sp.create_dependent_modules(data,'table')\n",
