--- a/notebooks/PsBoardDemo.ipynb
+++ b/notebooks/PsBoardDemo.ipynb
@@ -92,7 +92,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(psboard)"
+    "from sidecar import Sidecar\n",
+    "sc = Sidecar(title='Sidecar Output')\n",
+    "with sc:\n",
+    "    display(psboard)"
    ]
   }
  ],
@@ -112,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
