--- a/notebooks/ExampleDataTablePandas.ipynb
+++ b/notebooks/ExampleDataTablePandas.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from progressivis.nbwidgets import *\n",
+    "from progressivis_nb_widgets import *\n",
     "dt = DataTable()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,9 +30,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8043138fa6674f8e898a5db86d0b0881",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "DataTable(columns='[\"ix\", \"a\", \"b\"]', data='{\"data\": [[0, 64, 0.6891653428343597], [1, 57, 0.709275058733547],…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "dt.columns = json.dumps(df.columns.tolist())\n",
     "data = df_to_dict(df.iloc[0:10])\n",
@@ -45,9 +60,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8043138fa6674f8e898a5db86d0b0881",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "DataTable(columns='[\"ix\", \"a\", \"b\"]', data='{\"data\": [[0, 64, 0.6891653428343597], [1, 57, 0.709275058733547],…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e831b6b655644486aec78dac7199681d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "output2 = widgets.Output()\n",
     "display(dt, output2)\n",
@@ -63,6 +107,13 @@
     "        print(change['new'])\n",
     "dt.observe(on_value_change, \"page\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -81,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
