--- a/notebooks/ExampleDataTablePandas.ipynb
+++ b/notebooks/ExampleDataTablePandas.ipynb
@@ -36,12 +36,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8043138fa6674f8e898a5db86d0b0881",
+       "model_id": "7c5847cb95da4382980e30048b09cce2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "DataTable(columns='[\"ix\", \"a\", \"b\"]', data='{\"data\": [[0, 64, 0.6891653428343597], [1, 57, 0.709275058733547],…"
+       "DataTable(columns='[\"ix\", \"a\", \"b\"]', data='{\"data\": [[0, 20, 0.13770040554802654], [1, 59, 0.4080683848059516…"
       ]
      },
      "metadata": {},
@@ -66,12 +66,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8043138fa6674f8e898a5db86d0b0881",
+       "model_id": "7c5847cb95da4382980e30048b09cce2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "DataTable(columns='[\"ix\", \"a\", \"b\"]', data='{\"data\": [[0, 64, 0.6891653428343597], [1, 57, 0.709275058733547],…"
+       "DataTable(columns='[\"ix\", \"a\", \"b\"]', data='{\"data\": [[0, 20, 0.13770040554802654], [1, 59, 0.4080683848059516…"
       ]
      },
      "metadata": {},
@@ -80,7 +80,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e831b6b655644486aec78dac7199681d",
+       "model_id": "0f5653480bee41ac83b7bd40fa5a7ffc",
        "version_major": 2,
        "version_minor": 0
       },
