--- a/notebooks/ExampleProgressBar.ipynb
+++ b/notebooks/ExampleProgressBar.ipynb
@@ -55,7 +55,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "889421299e41463d8b76400d73882117",
+       "model_id": "0c03a76ac6224bb29b7f0ea6bf3495cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -69,7 +69,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b01cea6062c74cbdb253de5a7796f533",
+       "model_id": "eda337b81d7d419994d0071f247cf164",
        "version_major": 2,
        "version_minor": 0
       },
@@ -85,6 +85,63 @@
     "display(pb)\n",
     "display(slider)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0c03a76ac6224bb29b7f0ea6bf3495cd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "SparkLineProgressBar(data={'values': [0.0, 0.46431370621577545, 0.5849986122159594, 0.6696562432775424, 0.7370…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(pb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1a1071a697dd482397e96898223b5751",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "SparkLineProgressBar(data={'values': [0.0, 0.46431370621577545, 0.5849986122159594, 0.6696562432775424, 0.7370…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "pb2 = SparkLineProgressBar()\n",
+    "pb2.data = {'values': values.tolist()}\n",
+    "display(pb2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
