--- a/notebooks/MBKMeansWithLabelsDemo.ipynb
+++ b/notebooks/MBKMeansWithLabelsDemo.ipynb
@@ -49,6 +49,7 @@
     "    filt.create_dependent_modules(mbkmeans, data, 'table')\n",
     "    classes.append({'name': cname, 'x_column': '_0',\n",
     "                    'y_column': '_1', 'sample': mbkmeans if i==0 else None,\n",
+    "                    'sample_slot': 'table',\n",
     "                    'input_module': filt, 'input_slot': 'table'})\n",
     "sp = MCScatterPlot(scheduler=s, classes=classes)\n",
     "sp.create_dependent_modules()\n",
